--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-redux-toolkit",
+  "name": "movie-app-next",
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
@@ -8,10 +8,21 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
+    "@types/axios": "^0.14.0",
+    "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-redux": "7.2.2"
+    "react-icons": "^4.2.0",
+    "react-loader-spinner": "^4.0.0",
+    "react-redux": "7.2.2",
+    "styled-components": "^5.3.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/react": "^17.0.6",
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.2.4"
+  }
 }
