--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
+    "firebase": "^8.6.2",
+    "mongoose": "^5.12.11",
     "next": "latest",
     "react": "17.0.1",
     "react-dom": "17.0.1",
