--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
     "@types/axios": "^0.14.0",
+    "@types/recharts": "^2.0.0",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "firebase": "^8.6.2",
+    "highcharts": "^9.1.0",
+    "highcharts-react-official": "^3.0.0",
     "mongoose": "^5.12.11",
     "next": "latest",
     "react": "17.0.1",
@@ -19,6 +22,7 @@
     "react-icons": "^4.2.0",
     "react-loader-spinner": "^4.0.0",
     "react-redux": "7.2.2",
+    "recharts": "^2.0.9",
     "styled-components": "^5.3.0"
   },
   "license": "MIT",
